Make sure layouts with sidebar help don’t become misaligned

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -123,6 +123,10 @@
     padding-bottom: 48px;
     position: relative;
     width: 100%;
+
+    @include respond-min($screen-desktop) {
+        display: table;
+    }
 }
 
 .tab__main {
